--- a/gb/20/6/9/n12171757.md
+++ b/gb/20/6/9/n12171757.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ppnfq298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ppnfq298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ppnfq298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ppnfq298/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ppnfq298/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ppnfq298/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ppnfq298/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>横河：美国抗议、骚乱及背后因素</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/06/Industrial-and-Commercial-Bank-of-China-GettyImages-72258097-320x200.jpg" />
+
 <h6></h6>
 <hr>
 	<p>【大纪元2020年06月09日讯】（本文是美国时事评论员横河在希望之声广播电台访谈。以下为节目实录。）</p>
 <p>主持人：听众好，欢迎您收听《横河评论》，我是杨光。</p>
 <p>横河：我是横河，大家好。</p>
-<p>主持人：美国的抗议、<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E9%AA%9A%E4%B9%B1.md#1">骚乱</a>的画面已经被媒体传播到世界各地，看来中美两国各有各的难题，美国这边疫情刚刚放缓，又出现了群体的骚乱。美国其实黑白种族矛盾由来已久，这个嫌疑人佛洛伊德的意外死亡并不是美国历史上第一例与种族相关的案件，为什么这次会引起这么大的风波呢？美国的司法部长指责有各种的极端势力借机想达到它们的目的，而且还有外来因素介入其中。那么他这段话剑指何人呢？这些势力想达成什么目的呢？我们今天就请横河先生来给我们解读一下。</p>
-<p>横河先生，我想问您一下，<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%8A%97%E8%AE%AE.md#1">美国抗议</a>人群纵火和打劫的画面已经被各大媒体广泛报导，特别是大陆媒体，所以现在中国人印象中美国大乱已经失控了，我知道您是住在纽约附近，您了解的情况是怎么样的呢？</p>
-<p>横河：我在大纽约地区，这几天实际上我每天都去曼哈顿。纽约是一个比较乱的地区，著名的梅西百货也被暴徒抢了，大家知道每年一度的梅西大游行那是很有名的。现在抗议还在继续，但是打砸抢已经缓和了。即使在纽约其实也是分地段的，<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E9%AA%9A%E4%B9%B1.md#1">骚乱</a>多其中在商业区，比较中心的地区，时间也是在天黑以后，大概骚乱多数集中在，全国情况都差不多，都集中在大城市的中心区，而这些区除了商业区以外，很多就是，住在城市的其实都是一些要就是很有钱的，要就是很没钱的，所以伤害的很多是穷人，骚乱也是在天黑以后。</p>
+<p>主持人：美国的抗议、<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%AA%9A%E4%B9%B1.md#1">骚乱</a>的画面已经被媒体传播到世界各地，看来中美两国各有各的难题，美国这边疫情刚刚放缓，又出现了群体的骚乱。美国其实黑白种族矛盾由来已久，这个嫌疑人佛洛伊德的意外死亡并不是美国历史上第一例与种族相关的案件，为什么这次会引起这么大的风波呢？美国的司法部长指责有各种的极端势力借机想达到它们的目的，而且还有外来因素介入其中。那么他这段话剑指何人呢？这些势力想达成什么目的呢？我们今天就请横河先生来给我们解读一下。</p>
+<p>横河先生，我想问您一下，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%8A%97%E8%AE%AE.md#1">美国抗议</a>人群纵火和打劫的画面已经被各大媒体广泛报导，特别是大陆媒体，所以现在中国人印象中美国大乱已经失控了，我知道您是住在纽约附近，您了解的情况是怎么样的呢？</p>
+<p>横河：我在大纽约地区，这几天实际上我每天都去曼哈顿。纽约是一个比较乱的地区，著名的梅西百货也被暴徒抢了，大家知道每年一度的梅西大游行那是很有名的。现在抗议还在继续，但是打砸抢已经缓和了。即使在纽约其实也是分地段的，<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E9%AA%9A%E4%B9%B1.md#1">骚乱</a>多其中在商业区，比较中心的地区，时间也是在天黑以后，大概骚乱多数集中在，全国情况都差不多，都集中在大城市的中心区，而这些区除了商业区以外，很多就是，住在城市的其实都是一些要就是很有钱的，要就是很没钱的，所以伤害的很多是穷人，骚乱也是在天黑以后。</p>
 <p>当然如果是提前防范的话，本来纽约是可以减轻很多损失的，这个就和市长白思豪有很大的关系，我觉得他是把对抗议者的同情延伸到了打砸抢的人身上。抗议是比较普遍的，就是在各个城市；但是骚乱严重的基本上都是比较左派掌权的地区，这和当权者的政治倾向其实是有直接关系的。</p>
 <p>另外就是抗议和骚乱也集中在大城市。我住在被认为是纽约乡下的新泽西的居民区，如果不去纽约，日子和正常的时候没有什么不同，尤其是现在疫情已经缓解，居民是看不出大城市里面有骚乱迹象的。</p>
 <p>还有一点我认为需要说明的就是，美国其实有抗议文化，而且美国的抗议和香港相比，在正常情况下，它就伴有暴力、打砸抢的机会多的多，尤其是政治性很强的抗议。大家记得1999年西雅图那个反全球化的抗议，就是有很多骚乱。特别有意思的是，无论抗议的对象是谁，哪怕是相反的，这些无政府主义者都不缺席。实际上这次被认为不是真正抗议的，而是故意来捣乱的，和1999年在西雅图抗议的很多是同一群人，或者同一类人，就是西雅图20年前的抗议和这次抗议都有他们。</p>
-<p>当然，在<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%8A%97%E8%AE%AE.md#1">美国抗议</a>的权利属于权利法案当中最重要的部分，就是宪法修正案被称为权利法案。第一条就是宗教信仰自由、言论自由、新闻自由，这个对美国人来说非常重要，美国人把这个当作是生而具有的权利。</p>
+<p>当然，在<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E6%8A%97%E8%AE%AE.md#1">美国抗议</a>的权利属于权利法案当中最重要的部分，就是宪法修正案被称为权利法案。第一条就是宗教信仰自由、言论自由、新闻自由，这个对美国人来说非常重要，美国人把这个当作是生而具有的权利。</p>
 <p>中国人很难想像，美国人是如何平静的看待抗议，大部分情况下，而这种权利在中国是绝对没有的。你像中国，不要说组织这种大规模的抗议了，就一两个人去抗议都能把你抓起来。</p>
 <p>而美国很多城市你抗议甚至游行都是不需要申请许可的，任何许可都不需要，除非有两种情况，一种是如果你用大喇叭，那个需要申请，就叫“音响许可”，当然你不用喇叭，你就这么喊是没关系；另外一种是需要警察帮你封路的，这个是需要申请的，就这两种情况。所以美国的抗议非常多。</p>
 <p>我看有人在网上说，美国抗议100次还是美国，但是前苏联抗议了一次就不是苏联了，指的就是倒台了。</p>
@@ -63,7 +63,7 @@
 <p>另外一方面就谈到中共有没有这个能力。中共在美国的渗透重点是在这几方面，一个是华人社区，但是华人社区对美国社会的影响力相对比较少，不可能动员华人社区参与美国的打砸抢，尤其是这种遍及全国的。</p>
 <p>第二个是政府VIP，政府和一些高层人物、精英人物，这种方面中共的关系在街头骚乱方面，它用不上。第三个，中共的势力范围在华尔街，这个也用不上。当然还有其它许多的方面，比如说情报、宣传等等，那些根本用不上。</p>
 <p>也就是说做这种事情的话，中共可能有一点心有余而力不足。无论是正常的抗议，还是煽动的暴力，它都不在中共在美国已经建立的势力范围之内。当然它可以去参与，这个倒是可能的，但是说起多大作用？这个很难说。</p>
-<p>这方面主要是这几个方面起作用，一个是如果是<ahref="https://github.com/ppnfq298/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BB%8B%E5%85%A5.md#1">中共介入</a>的话，主要是刚才讲的；还有就是使用一些特工，做那些类似在香港反送中期间，起个引发暴力的作用。这部分应该不受领馆管辖的，而是国家安全部，或者是军事情报系统直线指挥。</p>
+<p>这方面主要是这几个方面起作用，一个是如果是<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E4%BB%8B%E5%85%A5.md#1">中共介入</a>的话，主要是刚才讲的；还有就是使用一些特工，做那些类似在香港反送中期间，起个引发暴力的作用。这部分应该不受领馆管辖的，而是国家安全部，或者是军事情报系统直线指挥。</p>
 <p>第二个是它在意识形态上跟Antifa这些组织很类似，就这些倾向于共产主义的组织很类似，这是它的意识形态影响力。</p>
 <p>第三种就是社交网络，这点有人注意到了，说是美国人有8%到9%的人使用抖音，他们也确实发现有很多抗议和骚乱者用这个抖音沟通或者是煽动。因为美国的社交网络公司受到法律限制，这些煽动暴力的内容是很快就要删掉的，它不能有的。而说抖音不受限制，所以很多人就利用抖音来进行这方面的交流、沟通。</p>
 <p>我确实也看到有人用中文在社交网络上煽动闹事，但是不知道这个人是个人行为，还是受中共指使的行为，确实有的。当然还有一些就是大陆留学生趁乱打劫了，有人在往上晒抢来的名牌包，结果被人举报了，这个就不属于我们今天讨论的范畴了。有些照片上抓到的看上去像是这一类人。</p>
@@ -76,36 +76,40 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/1/n12152622.md#1">美国专家析国内暴动：背后有中共鬼影</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/1/n12153261.md#1">中共利用美非裔之死挑衅 白宫顾问回呛</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/6/n12165615.md#1">资深媒体人谈美国街头暴力骚乱的背后</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12169006.md#1">中共利用骚乱抹黑美国 蓬佩奥严批引网民共鸣</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/1/n12152622.md#1">美国专家析国内暴动：背后有中共鬼影</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/1/n12153261.md#1">中共利用美非裔之死挑衅 白宫顾问回呛</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/6/n12165615.md#1">资深媒体人谈美国街头暴力骚乱的背后</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/6/7/n12169006.md#1">中共利用骚乱抹黑美国 蓬佩奥严批引网民共鸣</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11010920.md#1" target="_blank">共产暴政录：“六四屠城”的几个问题</a></li><li><a href="https://github.com/ppnfq298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/14/n9839741.md#1" target="_blank">【细语人生】见证大法的神奇（8）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168723.md#1">大陆储户巨额存款频消失 涉事银行说法惹议</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/6/n12167087.md#1">遭罢免 韩国瑜能东山再起？台名嘴下惊人断语</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168584.md#1">疑中共施压 传郝海东儿子被球队解雇</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168203.md#1">韩国瑜败选 国民党疏远中共 吁台湾第一</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168590.md#1">中共文件曝光 当局规定党员20条“不准”</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/6/n12166947.md#1">韩国瑜遭罢免 杜汶泽用简体字嘲讽获爆赞</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/8/n12169269.md#1">吴朋奉雨中告别式 演艺圈好友与爱犬送行</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12168949.md#1">与孙俪结婚9周年 邓超晒全家剪影照庆祝</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12167705.md#1">演唱会遭恶搞 黄明志兑现承诺：赚的捐出去</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12167867.md#1">完成吴朋奉罢韩遗愿 网友悼念：可安心走了</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/14/4/13/n4130520.md#1">米开朗基罗（11）《最后的审判》（上）</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/7/n12167819.md#1">睡觉时停止呼吸 美国男子看到无数天使唱歌</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/7/12/27/n1956051.md#1">城市中的神殿——另类神殿故事</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/4/n12159714.md#1">面纱下的真相 霍乱中的觉醒</a></li>
-<li><a href="https://github.com/ppnfq298/djy/blob/master/gb/20/6/8/n12169940.md#1">作恶太多 康生曹轶欧夫妇生前遭索命</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750400.md#1">这类人压力大却最长寿！3招抗压 远离衰老疾病</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ppnfq298/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ppnfq298/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/9/n12171757.htm">横河：美国抗议、骚乱及背后因素</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/6/9/n12171757.htm">横河：美国抗议、骚乱及背后因素</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ppnfq298/djy/blob/master/gb/20/6/9/n12171757.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ppnfq298/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ppnfq298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ppnfq298/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ppnfq298/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/20/6/9/n12171757.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
